Added request to Genv

--- a/index.html
+++ b/index.html
@@ -351,6 +351,10 @@ and being part of a wonderful music community
                         <input id="harvestDate" type="date" class="form-control" disabled>
                         <label for="harvestDate">Harvest start</label>
                     </div>
+                    <div class="form-floating m-1">
+                        <input id="returnMessage" type="text" class="form-control">
+                        <label for="returnMessage">Return Message</label>
+                    </div>
                 </div>
                 <div class="col p-0">
                     <div class="form-floating m-1">
