--- a/index.html
+++ b/index.html
@@ -330,6 +330,7 @@ and being part of a wonderful music community
                         <label for="waterSeconds">Water secs</label>
                     </div>
                     <button id="WaterButton" type="button" class="btn btn-warning m-2" disabled>Water</button>
+                    <button id="SelfieButton" type="button" class="btn btn-info m-2" disabled>Selfie</button>
                 </div>
             </div><!-- end of row -->
 
@@ -378,6 +379,7 @@ and being part of a wonderful music community
         </form>
 
         <div id="UpdateDisplay" class="m-2"></div>
+        <img id="SelfieImg" src=""/>
 
     </div><!-- end of Genv tab -->
 
