Move selfie button

--- a/index.html
+++ b/index.html
@@ -330,7 +330,6 @@ and being part of a wonderful music community
                         <label for="waterSeconds">Water secs</label>
                     </div>
                     <button id="WaterButton" type="button" class="btn btn-warning m-2" disabled>Water</button>
-                    <button id="SelfieButton" type="button" class="btn btn-info m-2" disabled>Selfie</button>
                 </div>
             </div><!-- end of row -->
 
@@ -373,6 +372,9 @@ and being part of a wonderful music community
                     <div class="form-floating m-1">
                         <input id="productionDate" type="date" class="form-control" disabled>
                         <label for="productionDate">Production date</label>
+                    </div>
+                    <div class="form-floating m-1">
+                        <button id="SelfieButton" type="button" class="btn btn-info m-2" disabled>Selfie</button>
                     </div>
                 </div>
             </div><!-- end of row -->
