--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@ and being part of a wonderful music community
         </form>
 
         <div id="UpdateDisplay" class="m-2"></div>
-        <img id="SelfieImg" src=""/>
+        <img id="SelfieImg" class="img-fluid rounded" src=""/>
 
     </div><!-- end of Genv tab -->
 
