gallery thumbnail smaller

--- a/index.html
+++ b/index.html
@@ -410,6 +410,7 @@ and being part of a wonderful music community
     <script src="js/speech.js?ver=1.106"></script>
     <script src="js/bot.js?ver=1.109"></script>
     <script src="js/music.js?ver=1.018"></script>
+    test
     -->
 
 </body>
