--- a/index.html
+++ b/index.html
@@ -74,22 +74,6 @@
 
 	<div class="tab-pane show active" id="HomePage">
         <div class="row">
-
-            <!--
-            <div class="col-8">
-                <img src=" Media/Photos/2023/20230111_170418478_iOS.jpg" class="rounded float-start m-1" width="20%">
-            </div>
-            <div class="col-4">
-                <img src=" Media/Photos/2023/20230122_004232072_iOS.jpg" class="rounded float-start m-1" width="20%">
-            </div>
-
-                <img src=" Media/Photos/2023/20230122_004232072_iOS.jpg" class="rounded float-start mt-2 me-2 jjk-thumb">
-            
-            <div class="col">
-                <img src=" Media/Photos/2023/20230111_170418478_iOS.jpg" class="rounded float-start mt-2 me-2 jjk-thumb">
-            </div>
-            -->
-
             <div class="col-sm-5 col-md-3 d-none d-sm-block">
                 <img src="Media/images/johnk-headshot.jpg" class="rounded-circle float-start mt-3 " alt="John Kauflin photo" width="90%">
                 <h1 class="ml-2">Welcome!</h1>
@@ -108,13 +92,12 @@
                             <i class="fa fa-video-camera fa-2x float-start"></i> Videos</button>
                         <button class="btn btn-success mt-2 mr-2 link-tile-tab media-page" data-MediaType="3" type="button" role="button">
                             <i class="fa fa-music fa-2x float-start"></i> Music</button>
+                        <button class="btn btn-warning mt-2 mr-2 link-tile-tab" type="button" role="button" id="SolarTile">
+                            <i class="fa fa-sun-o fa-2x float-start"></i> Solar</button>
                     </div>
                 </div>
 
                 <div class="row">
-                    <iframe src="emoncms/dashboard/view?id=3&apikey=38618b096c7f94b4bf7ce190af925037" 
-                        frameborder="0" class="mt-3" width="100%" height="520">
-                    </iframe>
                 </div>
             </div>
 
@@ -126,7 +109,6 @@
 
 	</div><!-- end of Home tab -->
 
- 
     <div class="offcanvas offcanvas-start" tabindex="-1" id="MediaMenuCanvas" aria-labelledby="MediaMenuCanvasLabel">
         <div class="offcanvas-header">
           <h5 class="offcanvas-title" id="MediaMenuCanvasLabel">Menu</h5>
@@ -410,7 +392,6 @@ and being part of a wonderful music community
     <script src="js/speech.js?ver=1.106"></script>
     <script src="js/bot.js?ver=1.109"></script>
     <script src="js/music.js?ver=1.018"></script>
-    test
     -->
 
 </body>
