album tile margin

--- a/index.html
+++ b/index.html
@@ -100,28 +100,28 @@
                 </div>
 
                 <div class="row">
-                    <div class="card float-start" style="width: 11rem;">
+                    <div class="card float-start m-1" style="width: 11rem;">
                         JJK Family Best
                         <a href="?albumKey=AL2">
                             <img src="Media/Photos/1 John J Kauflin/2002-to-2008/2003/04 Fall/2003-09-08 John J Kauflin family at home.jpg" 
                             class="rounded float-start mb-2" height="110">
                         </a>
                     </div>
-                    <div class="card float-start" style="width: 11rem;">
+                    <div class="card float-start m-1" style="width: 11rem;">
                         EA
                         <a href="?albumKey=AL1">
                             <img src="Media/Photos/1 John J Kauflin/2016-to-2022/2017/04 Fall/20170821_180859360_iOS.jpg" 
                             class="rounded float-start mb-2" height="110">
                         </a>
                     </div>
-                    <div class="card float-start" style="width: 11rem;">
+                    <div class="card float-start m-1" style="width: 11rem;">
                         Dennis
                         <a href="?albumKey=AL7">
                             <img src="Media/Photos/1 John J Kauflin/1987-to-1993/1987/1987-12 018.jpg" 
                             class="rounded float-start mb-2" height="110">
                         </a>
                     </div>
-                    <div class="card float-start" style="width: 8rem;">
+                    <div class="card float-start m-1" style="width: 8rem;">
                         Judith A Baker
                         <a href="?albumKey=AL6">
                             <img src="Media/Photos/2023/20231004_124622786_iOS.jpg" 
