--- a/index.html
+++ b/index.html
@@ -28,10 +28,11 @@
     <link rel="stylesheet" href="css/main.css?ver=4.018">
 </head>
 
+
 <body>
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark" role="navigation">
     <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">John J Kauflin</a>
+        <a class="navbar-brand" href="/home/">John J Kauflin</a>
         <button class="navbar-toggler shadow-none" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -49,7 +50,7 @@
                 <li class="nav-item"><a class="nav-link" data-bs-toggle="tab" href="#InfoPage">
                     <i class="fa fa-info-circle"></i> About</a></li>
                 <li class="nav-item"><a class="nav-link" data-bs-toggle="tab" href="#GenvPage">Genv</a></li>
-                <li class="nav-item"><a class="nav-link" id="login" href="#" role="button">login</a></li>
+                <li class="nav-item"><a class="nav-link" id="login" role="button">login</a></li>
                     <!--
                 <li class="nav-item"><a class="nav-link" data-bs-toggle="tab" href="#BotPage">
                     <i class="fa fa-android"></i> JokeBot</a></li>
@@ -100,6 +101,10 @@
                 </div>
 
                 <div class="row">
+                    <div class="card float-start m-1" style="width: 14rem;">
+                        Van Kauflin playlist
+                        <iframe width="200" height="110" src="https://www.youtube.com/embed/videoseries?si=b00EVJAIkvC3BZbS&amp;list=PLsga7fkzDdVcs7pgXT3zT5Ev8frFS2ReY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    </div>
                     <div class="card float-start m-1" style="width: 11rem;">
                         JJK Family Best
                         <a href="?albumKey=AL2">
@@ -127,6 +132,17 @@
                             <img src="Media/Photos/2023/20231004_124622786_iOS.jpg" 
                             class="rounded float-start mb-2" height="110">
                         </a>
+                    </div>
+                    <div class="card float-start m-1" style="width: 8rem;">
+                        John E Kauflin
+                        <a href="?albumKey=AL5">
+                            <img src="Media/Photos/2023/20231004_124526522_iOS.jpg" 
+                            class="rounded float-start mb-2" height="110">
+                        </a>
+                    </div>
+                    <div class="card float-start m-1" style="width: 14rem;">
+                        A Film by John Kauflin
+                        <iframe width="200" height="110" src="https://www.youtube.com/embed/Stis2U2FzkI?si=XARqEqtJsJPdANL7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                     </div>
                 </div>
             </div>
