--- a/index.html
+++ b/index.html
@@ -143,11 +143,11 @@
                         </a>
                     </div>
                     <!--
+                    -->
                     <div class="card float-start m-1" style="width: 14rem;">
                         A Film by John Kauflin
                         <iframe width="200" height="110" src="https://www.youtube.com/embed/Stis2U2FzkI?si=XARqEqtJsJPdANL7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                     </div>
-                    -->
 
                 </div>
             </div>
@@ -250,7 +250,7 @@
 
 			</div>
 			<div class="col-sm-5 col-lg-6">
-                <img id="BotImage" src="Media/images/bot.jpg" class="float-left m-2" width="60%">
+                <img id="BotImage" src="Media/images/botImage.jpg" class="float-left m-2" width="60%">
             </div>
 		</div>                
 	</div>
