--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
                     <i class="fa fa-video-camera" style="font-size: 1rem;"></i> Videos</a></li>
                 <li class="nav-item"><a class="nav-link media-page" data-bs-toggle="tab" href="#MediaPage" data-MediaType="3">
                     <i class="fa fa-music"></i> Music</a></li>
-                <li class="nav-item"><a class="nav-link" data-bs-toggle="tab" href="#BotPage">
-                    <i class="fa fa-android"></i> JohnBot</a></li>
                 <li class="nav-item"><a class="nav-link" data-bs-toggle="tab" href="#InfoPage">
                     <i class="fa fa-info-circle"></i> About</a></li>
                 <li class="nav-item"><a class="nav-link" data-bs-toggle="tab" href="#GenvPage">Genv</a></li>
                 <li class="nav-item"><a class="nav-link" id="login" role="button">login</a></li>
                     <!--
+                <li class="nav-item"><a class="nav-link" data-bs-toggle="tab" href="#BotPage">
+                    <i class="fa fa-android"></i> JohnBot</a></li>
                 <li id="PlaylistNav" class="nav-item d-none"><a class="nav-link" data-bs-toggle="tab" href="#PlaylistPage">
                     <i class="fa fa-spotify"></i> Playlist</a></li>
                 <li class="nav-item"><a class="nav-link" data-bs-toggle="tab" href="#MediaPage" data-dir="Docs"><i
@@ -142,8 +142,6 @@
                             class="rounded float-start mb-2" height="110">
                         </a>
                     </div>
-                    <!--
-                    -->
                     <div class="card float-start m-1" style="width: 14rem;">
                         A Film by John Kauflin
                         <iframe width="200" height="110" src="https://www.youtube.com/embed/Stis2U2FzkI?si=XARqEqtJsJPdANL7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
@@ -206,7 +204,7 @@
         </div>
     </div>
 
-
+    <!--
     <div class="tab-pane" id="BotPage">
         <div class="row">
 			<div class="col-sm-7 col-lg-6">
@@ -220,14 +218,11 @@
                     </div>
                 </div>
 
-                <!--
-                <button id="StartButton" type="button" class="btn btn-success shadow-none">Start</button>
-                -->
+                <button id="StartButton" type="button" class="btn btn-success shadow-none mt-2">Start</button>
                 <button id="BotStopButton" type="button" class="btn btn-danger shadow-none mt-2">Stop</button>
 
                 <div class="row">
                     <div class="col-5">
-                        <!--
                         <a id="SpeechToTextButton" href="">
                             <img id="STTButtonImage" src="Media/images/mic.gif" class="rounded-circle border border-dark border-2 m-2">
                         </a>
@@ -235,7 +230,6 @@
                             Continuous:
                             <input type="checkbox" id="ContinuousListening" checked />
                         </div>
-                        -->
                     </div>
 
                     <div class="col-7">
@@ -254,6 +248,7 @@
             </div>
 		</div>                
 	</div>
+    -->
 
     <!--
     <div class="tab-pane" id="PlaylistPage">
@@ -431,15 +426,15 @@ and being part of a wonderful music community
     <!-- Bootstrap 5 JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" 
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
-    <script src="https://unpkg.com/rivescript@latest/dist/rivescript.min.js"></script>
     <!--
+    <script src="https://unpkg.com/rivescript@latest/dist/rivescript.min.js"></script>
     <script src="https://sdk.scdn.co/spotify-player.js" type="text/javascript"></script>
     <script src="https://cdn.jsdelivr.net/npm/spotify-web-api-js@1.4.0/src/spotify-web-api.min.js" type="text/javascript"></script>
+    <script src="js/bot.js" type="module"></script>
     -->
     <script src="vendor/jkauflin/jjklogin/jjklogin.js?ver=1.021"></script>
     <script src="vendor/jkauflin/jjkgallery/mediagallery.js" type="module"></script>
     <script src="js/main.js" type="module"></script>
-    <script src="js/bot.js" type="module"></script>
     <script src="js/genv.js" type="module"></script>
 
     <!--
