--- a/index.html
+++ b/index.html
@@ -101,12 +101,6 @@
                 </div>
 
                 <div class="row">
-                    <!--
-                    <div class="card float-start m-1" style="width: 14rem;">
-                        Van Kauflin playlist
-                        <iframe width="200" height="110" src="https://www.youtube.com/embed/videoseries?si=b00EVJAIkvC3BZbS&amp;list=PLsga7fkzDdVcs7pgXT3zT5Ev8frFS2ReY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                    </div>
-                    -->
                     <div class="card float-start m-1" style="width: 11rem;">
                         JJK Family Best
                         <a href="?albumKey=AL2">
@@ -142,11 +136,12 @@
                             class="rounded float-start mb-2" height="110">
                         </a>
                     </div>
-                    <div class="card float-start m-1" style="width: 14rem;">
-                        A Film by John Kauflin
-                        <iframe width="200" height="110" src="https://www.youtube.com/embed/Stis2U2FzkI?si=XARqEqtJsJPdANL7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                    </div>
-
+                    <a href="https://youtu.be/Stis2U2FzkI?si=3m078v2YtKSuW4ay" target="_blank">
+                        "Play With Me" a 2012 film by John Kauflin
+                    </a>
+                    <a href="https://youtu.be/UYKTAviEbbg?si=phMU08sDkgO3BCnT" target="_blank">
+                        2023-12-05 Videos of Nerdvana playing at Caresource HQ for IT Xmas party
+                    </a>
                 </div>
             </div>
 
