--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@ and being part of a wonderful music community
             </div><!-- end of row -->
 
             <div class="row">
-                <div class="col p-0">
+                <div class="col-5 p-0">
                     <div class="form-floating m-1">
                         <input id="configDesc" type="text" class="form-control">
                         <label for="configDesc">Description</label>
@@ -386,7 +386,7 @@ and being part of a wonderful music community
                         <label for="returnMessage">Return Message</label>
                     </div>
                 </div>
-                <div class="col p-0">
+                <div class="col-7 p-0">
                     <div class="form-floating m-1">
                         <input id="frameIntervalInput" type="number" class="form-control">
                         <label for="frameIntervalInput">Frame Interval ms</label>
