--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@ and being part of a wonderful music community
 
             <img id="ImgDisplay" class="img-fluid rounded" width="90%" src=""/>
 
-            <div class="row my-1">
+            <div class="row">
                 <div class="col p-0">
                     <div class="form-floating m-1">
                         <input id="germinationStart" type="date" class="form-control">
