--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@ and being part of a wonderful music community
                         <input id="waterSeconds" type="number" class="form-control">
                         <label for="waterSeconds">Water secs</label>
                     </div>
-                    <button id="WaterButton" type="button" class="btn btn-warning m-2" disabled>
+                    <button id="WaterButton" type="button" class="btn btn-warning mx-1" disabled>
                         <i class="fa fa-tint fa-2x"></i>
                     </button>
                 </div>
@@ -382,7 +382,7 @@ and being part of a wonderful music community
                         <label for="plantingDate">Planting date</label>
                     </div>
                     <div class="form-floating m-1">
-                        <input id="returnMessage" type="text" class="form-control">
+                        <input id="returnMessage" type="text" class="form-control" disabled>
                         <label for="returnMessage">Return Message</label>
                     </div>
                 </div>
