--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@ and being part of a wonderful music community
                         <input id="currTemperature" type="number" class="form-control shadow-none">
                         <label for="currTemperature">Curr Temp</label>
                     </div>
-                    <button id="GetDataButton" type="button" class="btn btn-success m-2 float-end">Get Data</button>
+                    <button id="GetDataButton" type="button" class="btn btn-success m-2 float-end">Get</button>
                 </div>
         
                 <div class="col p-0">
@@ -325,11 +325,11 @@ and being part of a wonderful music community
                     </div>
                     <button id="UpdateButton" type="button" class="btn btn-primary m-2">Update</button>
 
-                    <button id="GetImagesButton" type="button" class="btn p-0 ms-1" disabled>
-                        <i class="fa fa-picture-o fa-3x"></i>
+                    <button id="GetImagesButton" type="button" class="btn p-0" disabled>
+                        <i class="fa fa-picture-o fa-3x border-0"></i>
                     </button>
                     <button id="ImgPlayButton" type="button" class="btn ms-1" disabled>
-                        <i class="fa fa-play fa-2x"></i>
+                        <i class="fa fa-play fa-2x border-0"></i>
                     </button>
                 </div>
         
@@ -347,7 +347,7 @@ and being part of a wonderful music community
                         <i class="fa fa-tint fa-2x"></i>
                     </button>
                     <button id="ImgForwardButton" type="button" class="btn " disabled>
-                        <i class="fa fa-step-forward fa-2x"></i>
+                        <i class="fa fa-step-forward fa-2x border-0"></i>
                     </button>
                     <!--
                     <div class="form-floating m-1">
