--- a/index.html
+++ b/index.html
@@ -325,10 +325,10 @@ and being part of a wonderful music community
                     </div>
                     <button id="UpdateButton" type="button" class="btn btn-primary m-2">Update</button>
 
-                    <button id="GetImagesButton" type="button" class="btn p-0" disabled>
+                    <button id="GetImagesButton" type="button" class="btn p-0 shadow-none border-0" disabled>
                         <i class="fa fa-picture-o fa-3x border-0"></i>
                     </button>
-                    <button id="ImgPlayButton" type="button" class="btn ms-1" disabled>
+                    <button id="ImgPlayButton" type="button" class="btn " disabled>
                         <i class="fa fa-play fa-2x border-0"></i>
                     </button>
                 </div>
