--- a/index.html
+++ b/index.html
@@ -326,10 +326,10 @@ and being part of a wonderful music community
                     <button id="UpdateButton" type="button" class="btn btn-primary m-2">Update</button>
 
                     <button id="GetImagesButton" type="button" class="btn p-0 shadow-none border-0" disabled>
-                        <i class="fa fa-picture-o fa-3x border-0"></i>
+                        <i class="fa fa-picture-o fa-3x"></i>
                     </button>
-                    <button id="ImgPlayButton" type="button" class="btn " disabled>
-                        <i class="fa fa-play fa-2x border-0"></i>
+                    <button id="ImgPlayButton" type="button" class="btn shadow-none border-0" disabled>
+                        <i class="fa fa-play fa-2x"></i>
                     </button>
                 </div>
         
@@ -346,8 +346,8 @@ and being part of a wonderful music community
                     <button id="WaterButton" type="button" class="btn btn-warning mx-1" disabled>
                         <i class="fa fa-tint fa-2x"></i>
                     </button>
-                    <button id="ImgForwardButton" type="button" class="btn " disabled>
-                        <i class="fa fa-step-forward fa-2x border-0"></i>
+                    <button id="ImgForwardButton" type="button" class="btn shadow-none border-0" disabled>
+                        <i class="fa fa-step-forward fa-2x"></i>
                     </button>
                     <!--
                     <div class="form-floating m-1">
