--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@ and being part of a wonderful music community
                         <input id="lastUpdateTs" type="datetime" class="form-control shadow-none" disabled>
                         <label for="lastUpdateTs">Last Update timestamp</label>
                     </div>
-                    <button id="UpdateButton" type="button" class="btn btn-primary m-2">Update</button>
+                    <button id="UpdateButton" type="button" class="btn btn-primary m-2">Upd</button>
 
                     <button id="GetImagesButton" type="button" class="btn p-0 shadow-none border-0" disabled>
                         <i class="fa fa-picture-o fa-3x"></i>
