--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@ and being part of a wonderful music community
                         <label for="targetTemperature">Target Temp</label>
                     </div>
                     <div class="form-floating m-1">
-                        <input id="currTemperature" type="number" class="form-control shadow-none">
+                        <input id="currTemperature" type="number" class="form-control shadow-none" disabled>
                         <label for="currTemperature">Curr Temp</label>
                     </div>
                     <button id="GetDataButton" type="button" class="btn btn-success m-2 float-end">Get</button>
