added genv switches

--- a/index.html
+++ b/index.html
@@ -453,6 +453,21 @@ and being part of a wonderful music community
                 </div>
             </div><!-- end of row -->
         
+            <div class="row">
+                <div class="col p-0">
+                    <div class="form-check form-switch mx-2">
+                        <input class="form-check-input shadow-none" type="checkbox" role="switch" id="loggingSwitch">
+                        <label class="form-check-label" for="loggingSwitch">Metrics Logging</label>
+                    </div>
+                </div>
+                <div class="col p-0">
+                    <div class="form-check form-switch mx-2">
+                        <input class="form-check-input shadow-none" type="checkbox" role="switch" id="imagesSwitch">
+                        <label class="form-check-label" for="imagesSwitch">Save Images</label>
+                    </div>
+                </div>
+            </div><!-- end of row -->
+
         </form>
     </div><!-- end of Genv tab -->
 
