--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@ and being part of a wonderful music community
             <div class="row">
                 <div class="col-3 p-0">
                     <div class="form-floating m-1">
-                        <input id="targetTemperature" type="number" class="form-control shadow-none">
+                        <input id="targetTemperature" type="number" class="form-control shadow-none" disabled>
                         <label for="targetTemperature">Target Temp</label>
                     </div>
                     <div class="form-floating m-1">
@@ -380,7 +380,7 @@ and being part of a wonderful music community
                 </div>
                 <div class="col-4 p-0">
                     <div class="form-floating m-1">
-                        <input id="configCheckInterval" type="number" class="form-control shadow-none">
+                        <input id="configCheckInterval" type="number" class="form-control shadow-none" disabled>
                         <label for="configCheckInterval">Check Interval</label>
                     </div>
                 </div>
@@ -389,7 +389,7 @@ and being part of a wonderful music community
             <div class="row">
                 <div class="col-4 p-0">
                     <div class="form-floating m-1">
-                        <input id="configDesc" type="text" class="form-control shadow-none">
+                        <input id="configDesc" type="text" class="form-control shadow-none" disabled>
                         <label for="configDesc">Description</label>
                     </div>
                     <div class="form-floating m-1">
@@ -399,7 +399,7 @@ and being part of a wonderful music community
                 </div>
                 <div class="col-4 p-0">
                     <div class="form-floating m-1">
-                        <input id="plantingDate" type="date" class="form-control shadow-none">
+                        <input id="plantingDate" type="date" class="form-control shadow-none" disabled>
                         <label for="plantingDate">Planting date</label>
                     </div>
                     <div class="form-floating m-1">
@@ -409,7 +409,7 @@ and being part of a wonderful music community
                 </div>
                 <div class="col-4 p-0">
                     <div class="form-floating m-1">
-                        <input id="daysToBloom" type="number" class="form-control shadow-none">
+                        <input id="daysToBloom" type="number" class="form-control shadow-none" disabled>
                         <label for="daysToBloom">Days to bloom</label>
                     </div>
                     <div class="form-floating m-1">
@@ -422,32 +422,32 @@ and being part of a wonderful music community
             <div class="row">
                 <div class="col p-0">
                     <div class="form-floating m-1">
-                        <input id="germinationStart" type="date" class="form-control shadow-none">
+                        <input id="germinationStart" type="date" class="form-control shadow-none" disabled>
                         <label for="germinationStart">Germination start</label>
                     </div>
                     <div class="form-floating m-1">
-                        <input id="daysToGerm" type="text" class="form-control shadow-none">
+                        <input id="daysToGerm" type="text" class="form-control shadow-none" disabled>
                         <label for="daysToGerm">Days to germinate</label>
                     </div>
                 </div>
                 <div class="col p-0">
                     <div class="form-floating m-1">
-                        <input id="waterInterval" type="number" class="form-control shadow-none">
+                        <input id="waterInterval" type="number" class="form-control shadow-none" disabled>
                         <label for="waterInterval">Watr int hrs</label>
                     </div>
                     <div class="form-floating m-1">
-                        <input id="waterDuration" type="number" class="form-control shadow-none">
+                        <input id="waterDuration" type="number" class="form-control shadow-none" disabled>
                         <label for="waterDuration">Water dur</label>
                     </div>
         
                 </div>
                 <div class="col p-0">
                     <div class="form-floating m-1">
-                        <input id="heatInterval" type="number" class="form-control shadow-none">
+                        <input id="heatInterval" type="number" class="form-control shadow-none" disabled>
                         <label for="heatInterval">Heat interval</label>
                     </div>
                     <div class="form-floating m-1">
-                        <input id="heatDuration" type="number" class="form-control shadow-none">
+                        <input id="heatDuration" type="number" class="form-control shadow-none" disabled>
                         <label for="heatDuration">Heat duration</label>
                     </div>
                 </div>
